--- a/test.ipynb
+++ b/test.ipynb
@@ -11,6 +11,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://www.transparenttextures.com/\n",
+    "\n",
+    "https://xinzhang-ops.github.io/daily_paper/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
