--- a/test.ipynb
+++ b/test.ipynb
@@ -392,6 +392,33 @@
     "</div>\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "summaries = []\n",
+    "with open('summaries.jsonl', 'r') as file:\n",
+    "    for line in file:\n",
+    "        summaries.append(json.loads(line.strip()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
