--- a/test.ipynb
+++ b/test.ipynb
@@ -411,7 +411,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "        paper_html += f\"\"\"\n",
+    "        <div class=\"paper-container\">\n",
+    "            <div class=\"paper-card\" style=\"{bg_style}\">             \n",
+    "                <h2 style=\"color: #ffffff;\">Paper {idx+1}</h2>\n",
+    "                <p style=\"color: #badb12;\"><strong>{title}</strong></p>\n",
+    "                <p style=\"color: #ffffff;\"><strong>Published: </strong>{published_at}</p>\n",
+    "                <p><strong>Link: </strong><a href=\"{url}\" target=\"_blank\">{url}</a></p>\n",
+    "                <div>{content_html}</div>\n",
+    "            </div>\n",
+    "            {quiz_tabs_html}\n",
+    "        </div>"
+   ]
   },
   {
    "cell_type": "code",
