--- a/test.ipynb
+++ b/test.ipynb
@@ -408,22 +408,241 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "GENAI_GATEWAY_API_KEY = os.getenv(\"GENAI_GATEWAY_API_KEY\")\n",
+    "os.environ['OPENAI_API_KEY'] = GENAI_GATEWAY_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from geotab_genai.genai_gateway_client import GenaiGatewayClient\n",
+    "\n",
+    "\n",
+    "claude35_sonnet_v2 = GenaiGatewayClient(\n",
+    "    api_key=os.getenv(\"GENAI_GATEWAY_API_KEY\"),\n",
+    "    env=\"staging\",\n",
+    "    jurisdiction=\"us\",\n",
+    "    temperature=0.8,\n",
+    "    provider='anthropics',\n",
+    "    chat_model='claude-3-5-sonnet-v2',\n",
+    "    max_tokens=8192,\n",
+    "    safety_filtering='off'\n",
+    ")\n",
+    "\n",
+    "\n",
+    "claude37_sonnet = GenaiGatewayClient(\n",
+    "    api_key=os.getenv(\"GENAI_GATEWAY_API_KEY\"),\n",
+    "    env=\"staging\",\n",
+    "    jurisdiction=\"us\",\n",
+    "    temperature=0.8,\n",
+    "    provider='anthropics',\n",
+    "    chat_model='claude-3-7-sonnet',\n",
+    "    max_tokens=8192,\n",
+    "    safety_filtering='off'\n",
+    ")\n",
+    "\n",
+    "gemini_20_pro = GenaiGatewayClient(\n",
+    "    api_key=os.getenv(\"GENAI_GATEWAY_API_KEY\"),\n",
+    "    env=\"staging\",\n",
+    "    jurisdiction=\"us\",\n",
+    "    temperature=0.8,\n",
+    "    provider='vertex-ai',\n",
+    "    chat_model='gemini-2.0-pro',\n",
+    "    max_tokens=8192,\n",
+    "    safety_filtering='off'\n",
+    ")\n",
+    "\n",
+    "\n",
+    "model_map = {\n",
+    "    'claude35': claude35_sonnet_v2,\n",
+    "    # 'claude35_haiku': claude35_haiku,\n",
+    "    'claude37': claude37_sonnet,\n",
+    "    '2.0 pro': gemini_20_pro,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def model_response(prompt, model_name, max_tokens=4096):\n",
+    "    model = model_map[model_name]\n",
+    "    version = None\n",
+    "    if model_name == '2.0 flash':\n",
+    "        version = '001'\n",
+    "    response = model.create_message(\n",
+    "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "        max_tokens=max_tokens,\n",
+    "        provider=model._provider,\n",
+    "        model=model._chat_model,\n",
+    "        version=version,\n",
+    "\n",
+    "    )['message']['content']\n",
+    "    return response\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test_article.txt', 'r') as f:\n",
+    "    test_article = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "        paper_html += f\"\"\"\n",
-    "        <div class=\"paper-container\">\n",
-    "            <div class=\"paper-card\" style=\"{bg_style}\">             \n",
-    "                <h2 style=\"color: #ffffff;\">Paper {idx+1}</h2>\n",
-    "                <p style=\"color: #badb12;\"><strong>{title}</strong></p>\n",
-    "                <p style=\"color: #ffffff;\"><strong>Published: </strong>{published_at}</p>\n",
-    "                <p><strong>Link: </strong><a href=\"{url}\" target=\"_blank\">{url}</a></p>\n",
-    "                <div>{content_html}</div>\n",
-    "            </div>\n",
-    "            {quiz_tabs_html}\n",
-    "        </div>"
+    "system_prompt = \"\"\"\n",
+    "You are a research assistant. You job is to help me to create a flow chart of the paper content. \n",
+    "Since it is about the workflow of the paper, your focus is the method applied in the paper.\n",
+    "\n",
+    "Your should contain your answer in a SVG format as following format:\n",
+    "<format>\n",
+    "you should have your output with this specific <svg> tag.\n",
+    "\n",
+    "<svg width=\"100%\" viewBox=\"0 0 1000 800\">\n",
+    "Here are the content you can create freely, use all shapes, text format or styles as you like.\n",
+    "Try to be creative, and make it look good and colorful.\n",
+    "</svg>\n",
+    "\n",
+    "</format>\n",
+    "\n",
+    "Here is the content of the paper:\n",
+    "<content>\n",
+    "{article_content}\n",
+    "</content>\n",
+    "\n",
+    "Now please give me the SVG format of the flow chart, you should only give me the SVG format directly, do not output backticks for formatting, no other text.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = system_prompt.format(article_content=test_article)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = model_response(prompt, 'claude35', max_tokens=4096)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<svg width=\"100%\" viewBox=\"0 0 1000 800\">\n",
+      "    <!-- Background -->\n",
+      "    <rect x=\"0\" y=\"0\" width=\"1000\" height=\"800\" fill=\"#f8f9fa\"/>\n",
+      "    \n",
+      "    <!-- Title -->\n",
+      "    <text x=\"500\" y=\"50\" text-anchor=\"middle\" font-size=\"24\" font-weight=\"bold\" fill=\"#2c3e50\">DeepSeek LLM Workflow</text>\n",
+      "    \n",
+      "    <!-- Main Flow -->\n",
+      "    <g transform=\"translate(0,0)\">\n",
+      "        <!-- Pre-training Phase -->\n",
+      "        <rect x=\"100\" y=\"100\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#3498db\" opacity=\"0.8\"/>\n",
+      "        <text x=\"200\" y=\"145\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">Pre-training Data</text>\n",
+      "        <text x=\"200\" y=\"165\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">2 Trillion Tokens</text>\n",
+      "        \n",
+      "        <!-- Architecture -->\n",
+      "        <rect x=\"400\" y=\"100\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#2ecc71\" opacity=\"0.8\"/>\n",
+      "        <text x=\"500\" y=\"145\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">Model Architecture</text>\n",
+      "        <text x=\"500\" y=\"165\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">LLaMA-based</text>\n",
+      "        \n",
+      "        <!-- Base Models -->\n",
+      "        <rect x=\"700\" y=\"100\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#e74c3c\" opacity=\"0.8\"/>\n",
+      "        <text x=\"800\" y=\"145\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">Base Models</text>\n",
+      "        <text x=\"800\" y=\"165\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">7B and 67B Configs</text>\n",
+      "        \n",
+      "        <!-- Fine-tuning -->\n",
+      "        <rect x=\"400\" y=\"300\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#9b59b6\" opacity=\"0.8\"/>\n",
+      "        <text x=\"500\" y=\"345\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">SFT</text>\n",
+      "        <text x=\"500\" y=\"365\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">1M+ Instances</text>\n",
+      "        \n",
+      "        <!-- DPO -->\n",
+      "        <rect x=\"400\" y=\"500\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#f1c40f\" opacity=\"0.8\"/>\n",
+      "        <text x=\"500\" y=\"545\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">DPO</text>\n",
+      "        <text x=\"500\" y=\"565\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">Preference Optimization</text>\n",
+      "        \n",
+      "        <!-- Final Chat Models -->\n",
+      "        <rect x=\"400\" y=\"700\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#1abc9c\" opacity=\"0.8\"/>\n",
+      "        <text x=\"500\" y=\"745\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">DeepSeek Chat Models</text>\n",
+      "        \n",
+      "        <!-- Connecting Lines -->\n",
+      "        <path d=\"M300 140 L400 140\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
+      "        <path d=\"M600 140 L700 140\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
+      "        <path d=\"M800 180 L800 340 L600 340\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
+      "        <path d=\"M500 380 L500 500\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
+      "        <path d=\"M500 580 L500 700\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
+      "        \n",
+      "        <!-- Arrows -->\n",
+      "        <polygon points=\"395,140 405,135 405,145\" fill=\"#95a5a6\"/>\n",
+      "        <polygon points=\"695,140 705,135 705,145\" fill=\"#95a5a6\"/>\n",
+      "        <polygon points=\"605,340 595,335 595,345\" fill=\"#95a5a6\"/>\n",
+      "        <polygon points=\"500,495 495,485 505,485\" fill=\"#95a5a6\"/>\n",
+      "        <polygon points=\"500,695 495,685 505,685\" fill=\"#95a5a6\"/>\n",
+      "    </g>\n",
+      "</svg>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
