--- a/test.ipynb
+++ b/test.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,20 +464,34 @@
     "    safety_filtering='off'\n",
     ")\n",
     "\n",
+    "gemini_25_pro = GenaiGatewayClient(\n",
+    "    api_key=os.getenv(\"GENAI_GATEWAY_API_KEY\"),\n",
+    "    env=\"staging\",\n",
+    "    jurisdiction=\"us\",\n",
+    "    temperature=0.8,\n",
+    "    provider='vertex-ai',\n",
+    "    chat_model='gemini-2.5-pro',\n",
+    "    max_tokens=8192,\n",
+    "    safety_filtering='off'\n",
+    ")\n",
+    "\n",
     "\n",
     "model_map = {\n",
     "    'claude35': claude35_sonnet_v2,\n",
     "    # 'claude35_haiku': claude35_haiku,\n",
     "    'claude37': claude37_sonnet,\n",
-    "    '2.0 pro': gemini_20_pro,\n",
+    "    'gemini_20_pro': gemini_20_pro,\n",
+    "    'gemini_25_pro': gemini_25_pro,\n",
     "}\n",
     "\n",
     "\n",
     "def model_response(prompt, model_name, max_tokens=4096):\n",
     "    model = model_map[model_name]\n",
     "    version = None\n",
-    "    if model_name == '2.0 flash':\n",
+    "    if model_name == 'gemini_20_flash':\n",
     "        version = '001'\n",
+    "    if model_name == 'gemini_25_pro':\n",
+    "        version = 'exp-03-25'\n",
     "    response = model.create_message(\n",
     "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
     "        max_tokens=max_tokens,\n",
@@ -492,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,6 +531,7 @@
     "<svg width=\"100%\" viewBox=\"0 0 1000 800\">\n",
     "Here are the content you can create freely, use all shapes, text format or styles as you like.\n",
     "Try to be creative, and make it look good and colorful.\n",
+    "Try use less arrows, since the arrow you give tends to be messy.\n",
     "</svg>\n",
     "\n",
     "</format>\n",
@@ -534,75 +549,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = model_response(prompt, 'claude35', max_tokens=4096)"
+    "response = model_response(prompt, 'gemini_25_pro', max_tokens=8192)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<svg width=\"100%\" viewBox=\"0 0 1000 800\">\n",
-      "    <!-- Background -->\n",
-      "    <rect x=\"0\" y=\"0\" width=\"1000\" height=\"800\" fill=\"#f8f9fa\"/>\n",
-      "    \n",
-      "    <!-- Title -->\n",
-      "    <text x=\"500\" y=\"50\" text-anchor=\"middle\" font-size=\"24\" font-weight=\"bold\" fill=\"#2c3e50\">DeepSeek LLM Workflow</text>\n",
-      "    \n",
-      "    <!-- Main Flow -->\n",
-      "    <g transform=\"translate(0,0)\">\n",
-      "        <!-- Pre-training Phase -->\n",
-      "        <rect x=\"100\" y=\"100\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#3498db\" opacity=\"0.8\"/>\n",
-      "        <text x=\"200\" y=\"145\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">Pre-training Data</text>\n",
-      "        <text x=\"200\" y=\"165\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">2 Trillion Tokens</text>\n",
-      "        \n",
-      "        <!-- Architecture -->\n",
-      "        <rect x=\"400\" y=\"100\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#2ecc71\" opacity=\"0.8\"/>\n",
-      "        <text x=\"500\" y=\"145\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">Model Architecture</text>\n",
-      "        <text x=\"500\" y=\"165\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">LLaMA-based</text>\n",
-      "        \n",
-      "        <!-- Base Models -->\n",
-      "        <rect x=\"700\" y=\"100\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#e74c3c\" opacity=\"0.8\"/>\n",
-      "        <text x=\"800\" y=\"145\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">Base Models</text>\n",
-      "        <text x=\"800\" y=\"165\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">7B and 67B Configs</text>\n",
-      "        \n",
-      "        <!-- Fine-tuning -->\n",
-      "        <rect x=\"400\" y=\"300\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#9b59b6\" opacity=\"0.8\"/>\n",
-      "        <text x=\"500\" y=\"345\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">SFT</text>\n",
-      "        <text x=\"500\" y=\"365\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">1M+ Instances</text>\n",
-      "        \n",
-      "        <!-- DPO -->\n",
-      "        <rect x=\"400\" y=\"500\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#f1c40f\" opacity=\"0.8\"/>\n",
-      "        <text x=\"500\" y=\"545\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">DPO</text>\n",
-      "        <text x=\"500\" y=\"565\" text-anchor=\"middle\" fill=\"white\" font-size=\"12\">Preference Optimization</text>\n",
-      "        \n",
-      "        <!-- Final Chat Models -->\n",
-      "        <rect x=\"400\" y=\"700\" width=\"200\" height=\"80\" rx=\"10\" fill=\"#1abc9c\" opacity=\"0.8\"/>\n",
-      "        <text x=\"500\" y=\"745\" text-anchor=\"middle\" fill=\"white\" font-size=\"16\">DeepSeek Chat Models</text>\n",
-      "        \n",
-      "        <!-- Connecting Lines -->\n",
-      "        <path d=\"M300 140 L400 140\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
-      "        <path d=\"M600 140 L700 140\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
-      "        <path d=\"M800 180 L800 340 L600 340\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
-      "        <path d=\"M500 380 L500 500\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
-      "        <path d=\"M500 580 L500 700\" stroke=\"#95a5a6\" stroke-width=\"2\" fill=\"none\"/>\n",
-      "        \n",
-      "        <!-- Arrows -->\n",
-      "        <polygon points=\"395,140 405,135 405,145\" fill=\"#95a5a6\"/>\n",
-      "        <polygon points=\"695,140 705,135 705,145\" fill=\"#95a5a6\"/>\n",
-      "        <polygon points=\"605,340 595,335 595,345\" fill=\"#95a5a6\"/>\n",
-      "        <polygon points=\"500,495 495,485 505,485\" fill=\"#95a5a6\"/>\n",
-      "        <polygon points=\"500,695 495,685 505,685\" fill=\"#95a5a6\"/>\n",
-      "    </g>\n",
-      "</svg>\n"
+      "```svg\n",
+      "<svg width=\"100%\" viewBox=\"0 0 1000 800\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+      "\n",
+      "  <!-- Define styles -->\n",
+      "  <style>\n",
+      "    .title { font-family: sans-serif; font-size: 28px; font-weight: bold; text-anchor: middle; fill: #333; }\n",
+      "    .phase-title { font-family: sans-serif; font-size: 20px; font-weight: bold; text-anchor: middle; fill: #222; }\n",
+      "    .step-text { font-family: sans-serif; font-size: 14px; text-anchor: middle; fill: #111; }\n",
+      "    .output-text { font-family: sans-serif; font-size: 15px; font-weight: bold; text-anchor: middle; fill: #0056b3; }\n",
+      "    .arrow-head { fill: #555; }\n",
+      "    .arrow-line { stroke: #555; stroke-width: 2; }\n",
+      "  </style>\n",
+      "\n",
+      "  <!-- Define arrow marker -->\n",
+      "  <defs>\n",
+      "    <marker id=\"arrow\" markerWidth=\"10\" markerHeight=\"7\" refX=\"0\" refY=\"3.5\" orient=\"auto\">\n",
+      "      <polygon points=\"0 0, 10 3.5, 0 7\" class=\"arrow-head\" />\n",
+      "    </marker>\n",
+      "  </defs>\n",
+      "\n",
+      "  <!-- Title -->\n",
+      "  <text x=\"500\" y=\"40\" class=\"title\">DeepSeek LLM Methodology Flowchart</text>\n",
+      "\n",
+      "  <!-- Phase 1: Scaling Law Investigation -->\n",
+      "  <g id=\"phase1\">\n",
+      "    <rect x=\"150\" y=\"80\" width=\"700\" height=\"150\" rx=\"15\" ry=\"15\" fill=\"#e0f7fa\" stroke=\"#b2ebf2\" stroke-width=\"1\"/>\n",
+      "    <text x=\"500\" y=\"110\" class=\"phase-title\">Phase 1: Scaling Law Investigation</text>\n",
+      "    <rect x=\"180\" y=\"130\" width=\"200\" height=\"70\" rx=\"5\" ry=\"5\" fill=\"#b2ebf2\" />\n",
+      "    <text x=\"280\" y=\"155\" class=\"step-text\">Study Hyperparameter</text>\n",
+      "    <text x=\"280\" y=\"175\" class=\"step-text\">(Batch Size, LR) Scaling</text>\n",
+      "    <rect x=\"400\" y=\"130\" width=\"200\" height=\"70\" rx=\"5\" ry=\"5\" fill=\"#b2ebf2\" />\n",
+      "    <text x=\"500\" y=\"155\" class=\"step-text\">Study Optimal Model/</text>\n",
+      "    <text x=\"500\" y=\"175\" class=\"step-text\">Data Scaling Allocation</text>\n",
+      "    <rect x=\"620\" y=\"130\" width=\"200\" height=\"70\" rx=\"5\" ry=\"5\" fill=\"#b2ebf2\" />\n",
+      "    <text x=\"720\" y=\"155\" class=\"step-text\">Analyze Dataset Impact</text>\n",
+      "    <text x=\"720\" y=\"175\" class=\"step-text\">on Scaling Laws</text>\n",
+      "  </g>\n",
+      "\n",
+      "  <!-- Arrow 1 -->\n",
+      "  <line x1=\"500\" y1=\"230\" x2=\"500\" y2=\"260\" class=\"arrow-line\" marker-end=\"url(#arrow)\" />\n",
+      "  <text x=\"520\" y=\"250\" class=\"step-text\" style=\"font-style: italic; fill: #555;\">Guides</text>\n",
+      "\n",
+      "  <!-- Phase 2: Pre-training -->\n",
+      "  <g id=\"phase2\">\n",
+      "    <rect x=\"150\" y=\"270\" width=\"700\" height=\"180\" rx=\"15\" ry=\"15\" fill=\"#e8f5e9\" stroke=\"#c8e6c9\" stroke-width=\"1\"/>\n",
+      "    <text x=\"500\" y=\"300\" class=\"phase-title\">Phase 2: Pre-training</text>\n",
+      "    <rect x=\"180\" y=\"320\" width=\"200\" height=\"70\" rx=\"5\" ry=\"5\" fill=\"#c8e6c9\" />\n",
+      "    <text x=\"280\" y=\"345\" class=\"step-text\">Data Collection</text>\n",
+      "    <text x=\"280\" y=\"365\" class=\"step-text\">(2T+ Tokens, En/Zh)</text>\n",
+      "    <rect x=\"400\" y=\"320\" width=\"200\" height=\"70\" rx=\"5\" ry=\"5\" fill=\"#c8e6c9\" />\n",
+      "    <text x=\"500\" y=\"345\" class=\"step-text\">Model Architecture</text>\n",
+      "    <text x=\"500\" y=\"365\" class=\"step-text\">(LLaMA-based, Multi-step LR)</text>\n",
+      "    <rect x=\"620\" y=\"320\" width=\"200\" height=\"70\" rx=\"5\" ry=\"5\" fill=\"#c8e6c9\" />\n",
+      "    <text x=\"720\" y=\"345\" class=\"step-text\">Train Models</text>\n",
+      "    <text x=\"720\" y=\"365\" class=\"step-text\">(e.g., 7B, 67B)</text>\n",
+      "    <!-- Output -->\n",
+      "    <ellipse cx=\"500\" cy=\"425\" rx=\"150\" ry=\"20\" fill=\"#a5d6a7\"/>\n",
+      "    <text x=\"500\" y=\"430\" class=\"output-text\">Output: DeepSeek LLM Base Models</text>\n",
+      "  </g>\n",
+      "\n",
+      "  <!-- Arrow 2 -->\n",
+      "  <line x1=\"500\" y1=\"450\" x2=\"500\" y2=\"480\" class=\"arrow-line\" marker-end=\"url(#arrow)\" />\n",
+      "\n",
+      "  <!-- Phase 3: Alignment -->\n",
+      "  <g id=\"phase3\">\n",
+      "    <rect x=\"150\" y=\"490\" width=\"700\" height=\"150\" rx=\"15\" ry=\"15\" fill=\"#fff3e0\" stroke=\"#ffe0b2\" stroke-width=\"1\"/>\n",
+      "    <text x=\"500\" y=\"520\" class=\"phase-title\">Phase 3: Alignment</text>\n",
+      "    <rect x=\"180\" y=\"540\" width=\"270\" height=\"40\" rx=\"5\" ry=\"5\" fill=\"#ffe0b2\" />\n",
+      "    <text x=\"315\" y=\"565\" class=\"step-text\">SFT Data Collection (>1M Instances)</text>\n",
+      "    <rect x=\"470\" y=\"540\" width=\"170\" height=\"40\" rx=\"5\" ry=\"5\" fill=\"#ffe0b2\" />\n",
+      "    <text x=\"555\" y=\"565\" class=\"step-text\">Supervised Fine-Tuning (SFT)</text>\n",
+      "    <rect x=\"660\" y=\"540\" width=\"190\" height=\"40\" rx=\"5\" ry=\"5\" fill=\"#ffe0b2\" />\n",
+      "    <text x=\"755\" y=\"565\" class=\"step-text\">Direct Preference Opt. (DPO)</text>\n",
+      "    <!-- Output -->\n",
+      "    <ellipse cx=\"500\" cy=\"615\" rx=\"150\" ry=\"20\" fill=\"#ffcc80\"/>\n",
+      "    <text x=\"500\" y=\"620\" class=\"output-text\">Output: DeepSeek Chat Models</text>\n",
+      "  </g>\n",
+      "\n",
+      "  <!-- Arrow 3 -->\n",
+      "  <line x1=\"500\" y1=\"640\" x2=\"500\" y2=\"670\" class=\"arrow-line\" marker-end=\"url(#arrow)\" />\n",
+      "\n",
+      "  <!-- Phase 4: Evaluation -->\n",
+      "  <g id=\"phase4\">\n",
+      "    <rect x=\"150\" y=\"680\" width=\"700\" height=\"100\" rx=\"15\" ry=\"15\" fill=\"#ede7f6\" stroke=\"#d1c4e9\" stroke-width=\"1\"/>\n",
+      "    <text x=\"500\" y=\"705\" class=\"phase-title\">Phase 4: Evaluation</text>\n",
+      "    <rect x=\"180\" y=\"720\" width=\"310\" height=\"45\" rx=\"5\" ry=\"5\" fill=\"#d1c4e9\" />\n",
+      "    <text x=\"335\" y=\"738\" class=\"step-text\">Evaluate Base Models</text>\n",
+      "    <text x=\"335\" y=\"755\" class=\"step-text\">(Benchmarks: Code, Math, Reasoning)</text>\n",
+      "    <rect x=\"510\" y=\"720\" width=\"310\" height=\"45\" rx=\"5\" ry=\"5\" fill=\"#d1c4e9\" />\n",
+      "    <text x=\"665\" y=\"738\" class=\"step-text\">Evaluate Chat Models</text>\n",
+      "    <text x=\"665\" y=\"755\" class=\"step-text\">(Benchmarks, Open-Ended, Safety)</text>\n",
+      "  </g>\n",
+      "\n",
+      "</svg>\n",
+      "```\n"
      ]
     }
    ],
