--- a/dailies/notes/2026-01-02.md
+++ b/dailies/notes/2026-01-02.md
@@ -1,48 +1,9 @@
-# Today's Key Insights
+# My Take Away
 
-After reading today's papers, here are my main takeaways:
+For paper **mHC: Manifold-Constrained Hyper-Connections**
 
-## Common Themes
-- All three papers focus on improving model efficiency
-- There's a growing trend toward multimodal approaches
-- Practical deployment considerations are becoming more important
+It is a paper from **DeepSeek** try to improve the residual connections. As we know the regular res connections are like **x + f(x)**. And there is another type called the **Hyper connections(HC)** that improves on the naive res connection. But in the LLM domain, we can see that if we do simple x + f(x), let's say language has semantic, grammar, all kinds of different meaning in the x, and our shallow and deep decoder blocks all modifying that same x, which may make this process all mixed together, since shallow layers maybe represents different language perspective of the language. Thus people change the simple residual connection into HC, which multiple a matrix **H** to the x, and each H is also a learnable matrix parameters. The goal of this H is we keep the idea of resnet, but also be able to have a couple different **streams**, so each stream itself is a sepreate stream of resnet, but represent different language meaning. However, this paper finds that without restriction on this matrix H, the training can be numerical instability because the H matrix can be accumulated over layers. So the paper created **Manifold-Constrained Hyper-Connections (mHC)**, the goal is to make sure this accumulated H multiplication will not blow-up. The most important feature of this mapping is we need if **H1**, **H2** in **M**, we also need **H2H1** in **M** as well, thus the chained multiplication will not blow-up the end result.
 
-## Personal Notes
-
-### Paper 1 Thoughts
-This paper's approach to **attention mechanisms** was particularly interesting. The trade-off between computational efficiency and model performance reminds me of similar work in:
-- Vision transformers (ViT)
-- Efficient transformers like Linformer
-
-> "The key insight is that not all attention heads are equally important" - this could be applied to other architectures too.
-
-### Things to Explore Further
-1. Try implementing the proposed method on my own dataset
-2. Compare with baseline models I've been working on
-3. Read the cited papers on sparse attention
-
-### Interesting Quotes
-- The methodology section mentioned an "adaptive threshold" - need to understand this better
-- Results show **23% improvement** over baseline - significant!
-
-## Action Items
-- [ ] Download the code repository and run experiments
-- [ ] Schedule meeting with team to discuss applications
-- [ ] Write blog post about key findings
-
-## Related Work to Read
-- Paper mentioned in references: "Efficient Transformers: A Survey"
-- Check out the authors' previous work on attention
-
----
-
-**Overall Rating**: ⭐⭐⭐⭐ (4/5)
-**Relevance to my work**: High
-**Implementation difficulty**: Medium
-
-## Visual Notes
-
-Here's a diagram I created while reading:
-
-![My diagram notes](test.jpg)
+![My diagram notes](all_types.png)
+![My diagram notes](HC_mHC.png)
 
