--- a/dailies/notes/2026-01-05.md
+++ b/dailies/notes/2026-01-05.md
@@ -11,6 +11,8 @@ So in fact the creativity of this paper is they redefined the term **agent** a b
 
 And why it is callded Youtu-Agent Framework is because it is from tencent Youtu lab.
 
+Github: https://github.com/TencentCloudADP/youtu-agent
+
 ![My diagram notes](Automated_generation_mechanism.png)
 ![My diagram notes](Training_Free_GRPO.png)
 ![My diagram notes](End2End.png)
