--- a/dailies/notes/2026-01-09.md
+++ b/dailies/notes/2026-01-09.md
@@ -2,7 +2,7 @@
 
 The paper discussed a quite deep problem I first time seen. It says the magtitutes of weight matrices inside the network is not decided by training data, but the weight decay and learning rate parameters. This not making sense at the first glance, since we all know the weights are decided by backpropagation with traing data loss.
 $$
-\|W\| \;\approx\; \sqrt{\frac{\eta}{\lambda}}
+\|W\| \approx \sqrt{\frac{\eta}{\lambda}}
 $$
 
 where η​ us the learning rate, λ is the weight decay. 
