--- a/dailies/notes/2026-01-07.md
+++ b/dailies/notes/2026-01-07.md
@@ -17,7 +17,7 @@ If we want to express in mathematical way:
 
 **Old method:**
 
-p(video | text) + p(audio | video, text)
+$p(\text{video} | \text{text}) + p(\text{audio} | \text{video}, \text{text})$
 
 in other words we do video, then audio is conditioned on both video and text.
 
@@ -27,6 +27,6 @@ in other words we do video, then audio is conditioned on both video and text.
 
 learn the joint distribution：
 
-p(video, audio | text)
+$p(\text{video}, \text{audio} | \text{text})$
 
 ![My diagram notes](LTX-2.png)
