--- a/test.ipynb
+++ b/test.ipynb
@@ -671,34 +671,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mnotebook controller is DISPOSED. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mnotebook controller is DISPOSED. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "SERVER_IP = \"192.168.1.100\"  # Change to your server's IP\n",
+    "\n",
+    "response = requests.post(\n",
+    "    f\"http://{SERVER_IP}:5000/chat\", \n",
+    "    json={\"message\": \"Hello Claude\", \"max_tokens\": 8192}\n",
+    ")\n",
+    "\n",
+    "print(response.json()[\"response\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -711,7 +716,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "planet",
+   "display_name": "LocalServer",
    "language": "python",
    "name": "python3"
   },
@@ -725,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
