--- a/dailies/notes/2026-02-04.md
+++ b/dailies/notes/2026-02-04.md
@@ -1,10 +1,9 @@
-# OmniSIFT: Modality-Asymmetric Token Compression for Efficient Omni-modal Large Language Models
+# AORCHESTRA: Automating Sub-Agent Creation for Agentic Orchestration
 
-This paper mainly talks about the inbalance between audio and video in traditional multi-models, when doing token compression, either seprete them and compress sepreately, or use audio to guide the video. And this pape proposed remove redundency in video first, then use the core video to guide the audio.
+For this paper they proposed a new agent work flow which sounds quite intereting. The core differences imo compare to traditional **ReAct-like** agents are, it can build sub-agent on the fly, for example tradition work flow has fixed agents like coder writer, but if the task request a music writer, the new framework can create one on the fly. Secondly it can dynamically select the context send to the subagent to reduce cost and noise. Third is it pick the underlying LLM dynamically, for harder task it can use a better model like gemini-3, for simplier task it can use mini models.
 
-But to me I learnt this new term **token compression**, this is used in multi-model since a lot of the time video and audio data has a lot of noise, for example background, silence moment etc, and those are not the core info related to the task. And those information can spend thousands of tokens. Unlike language, our text language we do not input unrelated tokens, and often is our text is lacking of info. So I'm thinking, this is why for text tasks we often have tools like retrieval, graphs to make the context more, but in audio and video we prune noise which is interesting.
+How it create agents on the fly is since they define 4 aspect of each sub-agent, Instruction, Context, Tools, Model, and the Orchestrator will simple create a json which dynmically create new instructions, and select proper chat context and a set of tools from tool pools and proper LLM. 
 
-However, I'm also thinking the retrieval maybe add useless context too which could be noise, in video they compare frames to keep those unique key features - sounds like COLMAP to find key points from the images. Maybe we can apply similar thing in retrieval to limit tokens too?
-
+Also the LLM change is something useful in practice, it doesn't sound fancy, but decision when is hard, and use which LLM is not a trivial task for many real projects.
 
 ![My diagram notes](image_1.png)
