--- a/test.ipynb
+++ b/test.ipynb
@@ -2451,14 +2451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'message': {'content': \"Hello! I'm just a virtual assistant, so I don't have feelings, but I'm here and ready to help you with anything you need. How about you—how are you doing today? Anything on your mind or something I can assist with? 😊\", 'role': 'assistant'}, 'model': 'ministral-3:8b', 'timestamp': '2026-02-16T00:33:52.441858'}\n"
+      "{'message': {'content': '我是由Mistral AI开发的大型语言模型**Ministral-3-8B-Instruct**，专为提供智能、上下文相关的对话而设计。我的知识库截至2023年10月，但可以通过工具获取最新信息（如日期、实时数据等）。\\n\\n你可以问我任何问题，比如：\\n- 科技、历史、科学等知识性问题\\n- 编程、写作、翻译等实用任务\\n- 规划、建议或创意灵感\\n\\n有什么我能帮助你的吗？ 😊', 'role': 'assistant'}, 'model': 'ministral-3:8b', 'timestamp': '2026-02-16T01:16:44.939253'}\n"
      ]
     }
    ],
@@ -2469,7 +2469,7 @@
     "    'http://192.168.1.164:8081/chat',\n",
     "    json={\n",
     "        'messages': [\n",
-    "            {'role': 'user', 'content': 'Hello, how are you?'}\n",
+    "            {'role': 'user', 'content': '你是谁'}\n",
     "        ]\n",
     "    }\n",
     ")\n",
